--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 			<div class="sectionTitle">
 				<h1>Pendidikan</h1>
 			</div>
+			<div></div>
 			
 			<div class="sectionContent">
 				<article>
